--- a/public/css/common.css
+++ b/public/css/common.css
@@ -33,11 +33,10 @@ h1 {
   border-top: solid 2px black;
 }
 
-p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-
+p.error {
+  color:red;
+  text-align:center;
+}
   ul{
     margin-top: 0;
     margin-bottom: 0;
